Blended homepage backgrounds together and fixed hard lighting blend

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </div>
     </div>
     <div class="options">
-        <div class="outside">
+        <div class="box" style="--img:url(./images/anna-tinted.jpg)">
             <button type="submit">
                 <span>Create Your Own Game</span>
                 <span>Customize a chess layout with colour!</span>
             </button>
         </div>
-        <div class="outside">
+        <div class="box" style="--img:url(./images/magnus-tinted.jpg)">
             <button type="submit">
                 <span>Tactics Finder</span>
                 <span>Place pieces on the board to find potential tactics</span>
