--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto&display=swap" rel="stylesheet">
@@ -28,16 +28,16 @@
         </div>
     </div>
     <div class="options">
-        <div class="box" style="--img:url(./images/anna-tinted.jpg)">
+        <div class="box" style="--img:url(./images/anna-tinted.jpg); alt: Tinted photo of Anna Taylor-Joy playing Chess">
             <button type="submit">
                 <span>Create Your Own Game</span>
                 <span>Customize a chess layout with colour!</span>
             </button>
         </div>
-        <div class="box" style="--img:url(./images/magnus-tinted.jpg)">
+        <div class="box" style="--img:url(./images/magnus-tinted.jpg); alt: Tinted photo of Magnus Carlsen playing Chess">
             <button type="submit">
                 <span>Tactics Finder</span>
-                <span>Place pieces on the board to find potential tactics</span>
+                <span>Place pieces on the board to find potential tactics!</span>
             </button>
         </div>
     </div>
