--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/index.css">
     <script src="../scripts/index.js"></script>
 </head>
@@ -32,10 +33,8 @@
         <div class="box" style="--img:url(../images/anna-tinted.jpg); alt: Tinted photo of Anna Taylor-Joy playing Chess">
             <div class="animation">
                 <button class="preload" id="button-one" onclick="location.href='./custom-chess.html'">
-                    <div class="text">
                         <span>Create Your Own Game</span>
                         <span> <br> Customize a chess layout with colour!<span>
-                    </div>
                 </button>
                 <img class="preload gif" id="gif-one" src="../images/chess-960.gif" alt="Chess 960 gameplay">
             </div>
@@ -43,10 +42,8 @@
         <div class="box" style="--img:url(../images/magnus-tinted.jpg); alt: Tinted photo of Magnus Carlsen playing Chess">
             <div class="animation">
                 <button class="preload" id="button-two" onclick="location.href='./tactics-finder.html'" type="button">
-                    <div class="text">
                         <span>Tactics Finder</span>
-                        <span><br><br><br>Place pieces on the board to find potential tactics!</span>
-                    </div>
+                        <span><br>Place pieces on the board to find potential tactics!</span>
                 </button>
                 <img class="preload gif" id="gif-two" src="../images/chess-tactics.png" alt="Chess board with arrows">
             </div>
