--- a/pages/custom-chess.html
+++ b/pages/custom-chess.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Custom Boards</title>
-    <link rel="stylesheet" href="../styles/custom-chess.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
-      integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous" />
     <script src="../scripts/custom-chess.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../styles/custom-chess.css">
     <script type="module"> 
       import "../scripts/node_modules/@chrisoakman/chessboardjs/dist/chessboard-1.0.0.js";
       var board2 = Chessboard("board2", {
@@ -26,13 +22,57 @@
       });
       $("#startBtn").on("click", board2.start);
       $("#clearBtn").on("click", board2.clear);
-    </script>
-  
+    </script> 
   </head>
-
   <body>
-    <div id="board2" style="width: 50%"></div>
-    <button id="startBtn">Start Position</button>
-    <button id="clearBtn">Clear Board</button>
+    <div class="sidenav">
+      <a href="index.html">HOME</a>
+      <a href="#rotate">ROTATE PIECES</a>
+      <a href="#rules">CHANGE RULES</a>
+      <a href="#bots">PLAY TWO BOTS</a>
+      <div class="dropdown-menu">
+        <button class="dropdown-btn">
+          SAVE BOARD
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-container">
+          <a href="#">BOARD 1</a>
+          <a href="#">BOARD 2</a>
+          <a href="#">BOARD 3</a>
+        </div>
+      </div>
+      <div class="dropdown-menu">
+        <button class="dropdown-btn">
+          LOAD BOARD
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-container">
+          <a href="#">BOARD 1</a>
+          <a href="#">BOARD 2</a>
+          <a href="#">BOARD 3</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="main">
+      <div id="board2" style="width: 400px"></div>
+    </div>
+
+    <script>
+      let dropdown = document.getElementsByClassName("dropdown-btn");
+      let i;
+
+      for (i = 0; i < dropdown.length; i++) {
+        dropdown[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          let dropdownContent = this.nextElementSibling;
+          if (dropdownContent.style.display === "block") {
+            dropdownContent.style.display = "none";
+          } else {
+            dropdownContent.style.display = "block";
+          }
+        });
+      }
+    </script>
   </body>
 </html>
