Added brain jiggle animation and gradient bg change

--- a/pages/custom-chess.html
+++ b/pages/custom-chess.html
@@ -62,11 +62,15 @@
       </div>
     </div>
     <div class="main" id="board-create">
-      <div id="board" style="width: 400px"></div>
-      <div class="buttons" id="buttons">
-        <button id="startBtn"><span>Default Position</span></button>
-        <button id="clearBtn"><span>Clear Board</span></button>
+      <img src="../images/brain.png" class="brain"/>
+      <div class="chess">
+        <div id="board" style="width: 400px"></div>
+        <div class="buttons" id="buttons">
+          <button id="startBtn"><span>Default Position</span></button>
+          <button id="clearBtn"><span>Clear Board</span></button>
+        </div>
       </div>
+      <img src="../images/brain.png" class="brain"/>
     </div>
     <script>
       let dropdown = document.getElementsByClassName("dropdown-btn");
