--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,35 @@
             <span>S</span>
         </div>
         <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="150" height="70" viewBox="0 0 640 480" fill="none" id="svg-text">
+                <defs>
+            <linearGradient id="linear-gradient" x1="-100%" y1="100%" x2="800%" y2="0" >
+                <stop offset="0" stop-color="#D7B56D">
+                   <animate attributeName="offset" values="0;0.8" dur="2s" repeatCount="indefinite"  /> 
+                </stop>
+                <stop offset="0" stop-color="rgba(255, 255, 255, 0.3)">
+                   <animate attributeName="offset" values="0;0.8" dur="2s" repeatCount="indefinite"  /> 
+                </stop>
+                <stop offset="0.1" stop-color="rgba(255, 255, 255, 0.3)">
+                    <animate attributeName="offset" values="0.1;1" dur="2s" repeatCount="indefinite"  /> 
+                </stop>
+                <stop offset="0.1" stop-color="#D7B56D">
+                    <animate attributeName="offset" values="0.1;1" dur="2s" repeatCount="indefinite"  /> 
+                </stop>
+            </linearGradient>
+        </defs> 
+        <g>
+            <title>Layer 1</title>
+            <g id="layer1">
+             <g id="g1269">
+              <path fill="url(#linear-gradient)" id="path1061" d="m633.494812,215.509827l-174.562134,142.974609l0,-70.86615l-442.913391,0l0,-141.7323l442.913391,0l0,-70.866119l174.562134,140.48996z"/>
+              <path fill="url(#linear-gradient)" id="path1691" d="m616.118774,216.272217l-146.490143,25.636719l-442.050507,0l0,-83.749298l442.050507,0l0,-59.149445l146.490143,117.262024z"/>
+             </g>
+            </g>
+           </g>
+            </svg>    
+        </div>
+        <div>
             <span>U</span>
             <span>L</span>
             <span>.</span>
