Added ability to change name of boards to be saved

--- a/pages/custom-chess.html
+++ b/pages/custom-chess.html
@@ -44,9 +44,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a id="board1-save">BOARD 1</a>
-          <a id="board2-save">BOARD 2</a>
-          <a id="board3-save">BOARD 3</a>
+          <a contenteditable="true" id="board1-save">BOARD 1</a>
+          <a contenteditable="true" id="board2-save">BOARD 2</a>
+          <a contenteditable="true" id="board3-save">BOARD 3</a>
         </div>
       </div>
       <div class="dropdown-menu">
@@ -55,9 +55,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a id="board1-load">BOARD 1</a>
-          <a id="board2-load">BOARD 2</a>
-          <a id="board3-load">BOARD 3</a>
+          <a contenteditable="true" id="board1-load">BOARD 1</a>
+          <a contenteditable="true" id="board2-load">BOARD 2</a>
+          <a contenteditable="true" id="board3-load">BOARD 3</a>
         </div>
       </div>
     </div>
