--- a/pages/custom-chess.html
+++ b/pages/custom-chess.html
@@ -30,13 +30,12 @@
       referrerpolicy="no-referrer"
     ></script>
     <script type="module" src="../scripts/custom-chess.js"></script>
-    <link rel="stylesheet" href="../styles/custom-chess.css" />
+    <link rel="stylesheet" href="../styles/custom-chess.css"/>
   </head>
   <body>
     <div class="sidenav">
       <a href="index.html">HOME</a>
       <a id="change-theme">THEME/STOP</a>
-      <a id="change-rules">CHANGE RULES</a>
       <a id="play-bots">PLAY TWO BOTS</a>
       <div class="dropdown-menu">
         <button class="dropdown-btn">
@@ -44,9 +43,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a contenteditable="true" id="board1-save">BOARD 1</a>
-          <a contenteditable="true" id="board2-save">BOARD 2</a>
-          <a contenteditable="true" id="board3-save">BOARD 3</a>
+          <a contenteditable="true" class="name-edit" id="board1-save">BOARD 1</a>
+          <a contenteditable="true" class="name-edit" id="board2-save">BOARD 2</a>
+          <a contenteditable="true" class="name-edit" id="board3-save">BOARD 3</a>
         </div>
       </div>
       <div class="dropdown-menu">
@@ -55,9 +54,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a contenteditable="true" id="board1-load">BOARD 1</a>
-          <a contenteditable="true" id="board2-load">BOARD 2</a>
-          <a contenteditable="true" id="board3-load">BOARD 3</a>
+          <a contenteditable="true" class="name-edit" id="board1-load">BOARD 1</a>
+          <a contenteditable="true" class="name-edit" id="board2-load">BOARD 2</a>
+          <a contenteditable="true" class="name-edit" id="board3-load">BOARD 3</a>
         </div>
       </div>
     </div>
